src/internal-packages/indexes/styles/create-index-modal.less
.create-index-modal {
  .modal-content {
    width: 75%;
    margin-left: auto;
    margin-right: auto;
  }

  .create-index-modal-content {
    padding-left: 40px;
    padding-right: 40px;

    .modal-header {
      padding-bottom: 4px;
    }

    .create-index-description {
      margin-bottom: 4px;
    }

    .create-index-fields {
      margin-bottom: 10px;

      .caret {
        position: absolute;
        margin-top: 8px;
        right: 10px;
      }

      .col-md-6 {
        padding-right: 0px;

        .dropdown-menu {
          max-height: 400px;
          overflow: auto;
        }
      }

      .col-md-4 {
        padding-right: 0px;
      }
    }

    .create-index-field-add {
      margin-top: 10px;
    }

    .create-index-field {
      margin-bottom: 5px;

      .has-error .Select-control {
        border: 1px solid #EF4C4C;
        box-shadow: 0 2px 6px 0 rgba(239,76,76,0.30);
      }

      .create-index-field-dropdown-name {
        width: 164px;
        text-align: left;
        text-transform: none;
        overflow: hidden;
        text-overflow: ellipsis;
        padding-right: 25px;
        white-space: nowrap;
      }

      .create-index-field-dropdown-type {
        width: 120px;
        text-align: left;
        text-transform: none;
        margin-left: -7px;
      }
    }

    .create-index-options {
      .create-index-checkbox {
        margin-top: 0px;

        .create-index-checkbox-input {
          font-size: 120%;
          cursor: pointer;
        }

        .create-index-checkbox-description {
          display: inline-block;
          font-weight: normal;
          margin-bottom: 4px;
          margin-left: 10px;
          cursor: pointer;
        }
      }

      .create-index-param {
        margin-bottom: 12px;

        .create-index-param-input {
          &[disabled] {
            border: 1px solid rgba(204, 204, 204, 0.3);
            cursor: not-allowed;
          }
        }

        .partial-filter-input {
          font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
        }

        .inline-option-field {
          display: inline-block;
          width: 55%;
        }

        .create-index-param-description {
          display: inline-block;
          margin-left: 10px;
        }
      }
    }

    .options-toggle-bar {
      cursor: pointer;
      .options-toggle-bar-header {
        margin-top: 10px;

        i {
          margin-left: -5px;
        }

        .options-toggle-bar-header-text {
          display: inline;
          margin-left: 4px;
          margin-right: -9px;
        }
      }
    }

    .index-field-dropdown-btn {
      text-transform: none;
    }

    .create-index-confirm-buttons {
      text-align: right;

      .create-index-confirm-buttons-cancel {
        margin-left: 10px;
      }

      .create-index-confirm-buttons-create {
        margin-left: 10px;
      }
    }
  }
}

